playbin: Fix logic to detect if a stream-change is currently pending

Fixes duration reporting in gapless playback between files.

https://bugzilla.gnome.org/show_bug.cgi?id=585969